# pyra

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: c5663cb7f339_add_polls_karma.py  c7f4c281255d_initial.py
config/: config.example.yaml
docker/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: config.md  deployment.md  permissions.md  plugins.md
plugins_extra/: OPTIONAL_PLUGINS.md  __init__.py  arrnotify.py  headlines.py  invite.py  ipinfo.py  lastfm.py  movies.py  remind.py  selfauth.py  timebot.py  translate.py  tvmaze.py  voting.py
pybot/: __init__.py  __main__.py  plugin.py
pybot/core/: __init__.py  bot.py  config.py  database.py  irc.py  logging.py  partyline.py  permissions.py  plugin_loader.py  scheduler.py  services.py
pybot/plugins/: __init__.py  admin.py  adminchannel.py  antispam.py  calc.py  choose.py  ctcp.py  dice.py  greet.py  help.py  karma.py  notes.py  search.py  seen.py  tell.py  uptime.py  url.py  weather.py
pybot/scripts/: __init__.py  ctl.py  setup.py
pybot/web/: __init__.py  app.py  auth.py
pybot/web/routes/: __init__.py  channels.py  console.py  dashboard.py  logs.py  plugins.py  settings.py  users.py  webhooks.py
pybot/web/templates/: base.html  channel_admin.html  channel_settings.html  channels.html  console.html  dashboard.html  login.html  logs.html  plugin_detail.html  plugins.html  settings.html  users.html
tests/: conftest.py  test_config.py  test_database.py  test_irc_parse.py  test_logging.py  test_performance_observability.py  test_permissions.py  test_plugin_loader.py  test_scheduler.py  test_services.py  test_web_auth.py
tests/plugins/: test_ctcp.py  test_help.py  test_seen.py  test_tell.py
